# dieese-omal-policy-replication

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT.md  README.md  REPOSITORY_MANIFEST.csv  THIRD_PARTY_DATA.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: smoke-test.yml
data/interim/: informality_dieese_ratio_state_quarter.csv  ipca_all_groups_city_monthly.csv  ipca_groups_part19.csv  ipca_groups_part20.csv  omal_monthly_2020_2026_simplified.csv  pnad_city_labour_income_quarterly.csv  pof_omal_households.pkl
data/processed/article/: food_expenditure_shares.csv  state_income_relative_dieese_2025.csv  world_bank_poverty_lines_2021_ppp.csv
data/processed/omal/: omal_fullgroups_comparison_old_new.csv  omal_fullgroups_latest_household_types.csv  omal_fullgroups_metadata.json  omal_fullgroups_monthly_2020_2026.csv  omal_fullgroups_pof_base.csv  omal_fullgroups_pof_stage_metadata.json  (+2 more)
data/raw/: README.md  large_files_manifest.json
docs/: UPLOAD_VIA_GITHUB_PTBR.md  data_dictionary.md  data_sources.md  methodology.md  references.bib  reproducibility_status.md
outputs/article/: Is_the_DIEESE_minimum_wage_useful_for_policy_editorial_v2.md
outputs/tables/: OMAL_indicador_9_grupos_IPCA_2020_2026.xlsx  kaitz_brazil_oecd.xlsx  minimum_wage_nominal_necessary_1994_2026.xlsx
src/: build_article.py  build_omal_series.py  build_pof_reference.py  extract_ipca_groups.py  make_article_figures_01_14.py  make_omal_figures_15_22.py  prepare_pnad_city_income.py  reassemble_raw_files.py
tests/: test_outputs.py
(+7 files in other folders)
